k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-js-sample-app-service
spec:
  selector:
    app: next-js-sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
