k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: next-js-sample-app
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: next-js-sample-app-service
    weight: 100
  wildcardPolicy: None
